début du responsive web design

--- a/contact.html
+++ b/contact.html
@@ -80,46 +80,76 @@
                       <li><a href="#tabs-2">atelier de production</a></li>
                     </ul>
                     <div id="tabs-1">
-                      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos asperiores, consequatur rem voluptatem hic, quia iste, autem unde odit nostrum quo! Voluptatibus veritatis, architecto cupiditate repudiandae autem sit culpa ea?</h2>
-                      <form action="" method="post">
-                        <div class="el-row">
-                            <div class="el-col"><input type="text" name="name" placeholder="Nom" /></div>
-                            <div class="el-col"><input type="email" name="email" placeholder="E-mail" /></div>
-                            <div class="el-col"><input type="tel" name="phone" placeholder="Téléphone" /></div>
+                        <div class="el-grid">
+                            <div class="el-left-container">
+                                <h2>Bureaux et stock des pièces de rechanges au centre de zone industriel SAPINO</h2>
+                                <form action="" method="post">
+                                    <div class="el-row">
+                                        <div class="el-col"><input type="text" name="name" placeholder="Nom" /></div>
+                                        <div class="el-col"><input type="email" name="email" placeholder="E-mail" /></div>
+                                    </div>
+                                    <div class="el-row">
+                                        <div class="el-col"><input type="tel" name="phone" placeholder="Téléphone" /></div>
+                                        <div class="el-col"><input type="text" name="subject" placeholder="Sujet" /></div>
+                                    </div>
+                                    <div class="el-row">
+                                        <div class="el-col el-textarea"><textarea name="message"></textarea></div>
+                                    </div>
+                                    <button type="submit">Envoyer mon message</button>
+                                </form>
+                            </div>
+                            <div class="el-right-container">
+                                <div class="el-map">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4700.24190077495!2d-7.604590993436631!3d33.590436344262315!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd65c05ccb63%3A0xf4a2859b37f1f5ab!2sAlamitec%20Sarl!5e0!3m2!1sfr!2sma!4v1741169296581!5m2!1sfr!2sma" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
+                                <ul>
+                                    <li><a href="https://maps.app.goo.gl/Apm5K6bW1ZFYgtzM9"><i class="fas fa-map-marker"></i>Quartier industriel SAPINO Lot n°72- Nouaceur, Casablanca-Maroc</a></li>
+                                    <li><a href="tel:+212522537340"><i class="fas fa-phone"></i>(+212) 522 537 340</a></li>
+                                    <li><a href="tel:+212522537341"><i class="fas fa-phone"></i>(+212) 522 537 341</a></li>
+                                    <li><a href="mailto:alamitec@menara.ma"><i class="fas fa-envelope"></i>alamitec@menara.ma</a></li>
+                                    <li><a href="javascript:;"><i class="fas fa-clock"></i>Lun - Ven: 9:00 - 18:00</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="el-row">
-                            <div class="el-col"><input type="text" name="subject" placeholder="Sujet" /></div>
-                        </div>
-                        <div class="el-row">
-                            <div class="el-col el-textarea"><textarea name="message"></textarea></div>
-                        </div>
-                      </form>
                     </div>
                     <div id="tabs-2">
-                      <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+                        <div class="el-grid">
+                            <div class="el-left-container">
+                                <h2>Atelier de production avec plus de 5000m2 comprenant un atelier d’usinage , atelier de câblage des armoires électriques , espace de fabrication métallique et bureau d’études.</h2>
+                                <form action="" method="post">
+                                    <div class="el-row">
+                                        <div class="el-col"><input type="text" name="name" placeholder="Nom" /></div>
+                                        <div class="el-col"><input type="email" name="email" placeholder="E-mail" /></div>
+                                    </div>
+                                    <div class="el-row">
+                                        <div class="el-col"><input type="tel" name="phone" placeholder="Téléphone" /></div>
+                                        <div class="el-col"><input type="text" name="subject" placeholder="Sujet" /></div>
+                                    </div>
+                                    <div class="el-row">
+                                        <div class="el-col el-textarea"><textarea name="message"></textarea></div>
+                                    </div>
+                                    <button type="submit">Envoyer mon message</button>
+                                </form>
+                            </div>
+                            <div class="el-right-container">
+                                <div class="el-map">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.860477656115!2d-7.51037868479858!3d33.53101298075094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzPCsDMxJzUxLjciTiA3wrAzMCcyOS41Ilc!5e0!3m2!1sfr!2sfr!4v1514879346367" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
+                                <ul>
+                                    <li><a href="https://maps.app.goo.gl/S7gThh9tdPNRJ9db7"><i class="fas fa-map-marker"></i>EL KHALKA LAHRAOUYINE 20490, Casablanca-Maroc</a></li>
+                                    <li><a href="tel:+212522537340"><i class="fas fa-phone"></i>(+212) 522 537 340</a></li>
+                                    <li><a href="tel:+212522537341"><i class="fas fa-phone"></i>(+212) 522 537 341</a></li>
+                                    <li><a href="mailto:alamitec@menara.ma"><i class="fas fa-envelope"></i>alamitec@menara.ma</a></li>
+                                    <li><a href="javascript:;"><i class="fas fa-clock"></i>Lun - Ven: 9:00 - 18:00</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                   </div>
             </div>
         </section>
         <!-- FIN  -->
 
-        <section id="el-realisation" class="el-center-box">
-            <div class="el-content-area">
-                <h2 class="el-title">nos réalisations</h2>
-                <div class="owl-carousel">
-                    <img src="./assets/images/realisations/1.jpg" alt="" />
-                    <img src="./assets/images/realisations/2.jpg" alt="" />
-                    <img src="./assets/images/realisations/3.jpg" alt="" />
-                    <img src="./assets/images/realisations/4.jpg" alt="" />
-                    <img src="./assets/images/realisations/5.jpg" alt="" />
-                    <img src="./assets/images/realisations/6.jpg" alt="" />
-                    <img src="./assets/images/realisations/7.jpg" alt="" />
-                    <img src="./assets/images/realisations/8.jpg" alt="" />
-                    <img src="./assets/images/realisations/9.jpg" alt="" />
-                    <img src="./assets/images/realisations/10.jpg" alt="" />
-                </div>
-            </div>
-        </section>
 
         <section class="el-banner-cta" class="el-center-box">
             <div class="el-content-area">
