--- a/index.html
+++ b/index.html
@@ -12,27 +12,70 @@
     <!-- CUSTOM -->
     <link rel="stylesheet" href="./assets/css/element.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     
     <div id="el-page">
 
         <header id="el-header-page">
-            <a href="" class="el-logo">
-                <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
-            </a>
-            <ul class="el-container">
-                <li>
-                    <a href="" class="el-center-box">
-                        <i class="fas fa-search"></i>
-                    </a>
-                </li>
-                <li>
-                    <button class="el-center-box">
-                        <i class="fas fa-bars"></i>
-                    </button>
-                </li>
-            </ul>
+            <section id="el-top" class="el-center-box">
+                <div class="el-content-area">
+                    <div class="el-grid">
+                        <div class="el-container">
+                            <ul class="el-langages">
+                                <li><a href=""><img src="https://flagcdn.com/ma.svg" alt=""></a></li>
+                                <li><a href=""><img src="https://flagcdn.com/gb.svg" alt=""></a></li>
+                                <li><a href=""><img src="https://flagcdn.com/fr.svg" alt=""></a></li>
+                            </ul>
+                            <ul class="el-social-network">
+                                <li><a href="https://www.facebook.com/" class="el-center-box"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.linkedin.com/" class="el-center-box"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/" class="el-center-box"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="mailto:alamitec@contact.ma" class="el-center-box"><i class="fab fa-vk"></i></a></li>
+                            </ul>
+                        </div>
+                        <ul class="el-container-two">
+                            <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-globe-africa"></i>contact@alamitec.ma</a></li>
+                            <li><a href="tel:+212522537340"><i class="fas fa-phone"></i>(+212) 522 537 340</a></li>
+                            <li><a href="tel:+212522537341"><i class="fas fa-phone"></i>(+212) 522 537 341</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section id="el-bottom" class="el-center-box">
+                <div class="el-content-area">
+                    <div class="el-grid">
+                        <a href="" class="el-logo">
+                            <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
+                        </a>
+                        <ul class="el-container">
+                            <li>
+                                <a href="" class="el-center-box">
+                                    <i class="fas fa-search"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <button class="el-center-box">
+                                    <i class="fas fa-bars"></i>
+                                </button>
+                            </li>
+                        </ul>
+                        <nav>
+                            <ul id="el-menu-desktop">
+                                <li><a href="" class="el-menu-level-one">accueil</a></li>
+                                <li><a href="" class="el-menu-level-one">société<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">mines et carrières<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">machines<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">prestations<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">pièces de rechange</a></li>
+                                <li><a href="" class="el-menu-level-one">contact</a></li>
+                                <li><a href="" class="el-center-box el-search"><i class="fas fa-search"></i></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </section>
         </header>
 
         <section id="el-hero-slider">
